[B][COLOR gold]v4.01.04[/COLOR][/B]
- Indexers tweaks

[B][COLOR gold]v4.01.03[/COLOR][/B]
- Code cleanup

[B][COLOR gold]v4.01.02[/COLOR][/B]
- Size filtering changes:
    Min/Max movie/episode size settings removed, and replaced with new Min/Max
    GB per hour setting, that applies to both movies & episodes
- Added new [I]Scrape Unfiltered[/I] context menu entry, that when triggered the add-on
    starts scraping with all sources filters (including pre-emptive termination) ignored

[B][COLOR gold]v4.01.01[/COLOR][/B]
- Fixed some py2/Kodi pre-19 encoding issues
- Removed Cloudflare protected scrapers disableing option
  (cloudflare anti-bot protection bypassing doesn't work anymore so
   relevant scrapers get removed from package)
- Source quality/type identification tweaks

[B][COLOR gold]v4.01.00[/COLOR][/B]
- Movies metadata main indexer altered from Trakt to TMDb
- Changes to metadata to ensure we always use the international title for scraping

[B][COLOR gold]v4.00.36[/COLOR][/B]
- Fixed some issues with special episodes
- Fixed notification on failed download attempt

[B][COLOR gold]v4.00.35[/COLOR][/B]
- Subtitles: workaround Kodi's issue with forced Greek subtitles setting

[B][COLOR gold]v4.00.34[/COLOR][/B]
- Minor metadata and playback fixes

[B][COLOR gold]v4.00.33[/COLOR][/B]
- Subtitles fix for Kodi 19

[B][COLOR gold]v4.00.32[/COLOR][/B]
- Changes to the settings cleaning function

[B][COLOR gold]v4.00.31[/COLOR][/B]
- Fixed Resume dialogue sometimes popping-up twice
- Fixed sources occasionally getting filtered-out for no reason

[B][COLOR gold]v4.00.30[/COLOR][/B]
- Revert some changes that broke certain streams resolving

[B][COLOR gold]v4.00.29[/COLOR][/B]
- Updated premium hosts

[B][COLOR gold]v4.00.28[/COLOR][/B]
- Fixed some TV shows scraping issues when metadata language is other than En
- Addition to TMDb/"scene" data mismatch workaround

[B][COLOR gold]v4.00.27[/COLOR][/B]
- Fixed "Find similar" list backing out to add-on's initial menu